# music_sync_api

./: README.md  pyproject.toml
rest_server/: config.py  routers.py  server.py
